part 1 rejig